_generated-doc/3.2/config/quarkus-cache.adoc

:summaryTableId: quarkus-cache
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-cache_configuration]]link:#quarkus-cache_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-cache_quarkus.cache.type]]`link:#quarkus-cache_quarkus.cache.type[quarkus.cache.type]`


[.description]
--
Cache type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`caffeine`


a| [[quarkus-cache_quarkus.cache.enabled]]`link:#quarkus-cache_quarkus.cache.enabled[quarkus.cache.enabled]`


[.description]
--
Whether or not the cache extension is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-cache_quarkus.cache.caffeine.default-config-default-configuration-applied-to-all-caffeine-caches-lowest-precedence]]link:#quarkus-cache_quarkus.cache.caffeine.default-config-default-configuration-applied-to-all-caffeine-caches-lowest-precedence[Default configuration applied to all Caffeine caches (lowest precedence)]

h|Type
h|Default

a| [[quarkus-cache_quarkus.cache.caffeine.initial-capacity]]`link:#quarkus-cache_quarkus.cache.caffeine.initial-capacity[quarkus.cache.caffeine.initial-capacity]`


[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_INITIAL_CAPACITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_INITIAL_CAPACITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-cache_quarkus.cache.caffeine.maximum-size]]`link:#quarkus-cache_quarkus.cache.caffeine.maximum-size[quarkus.cache.caffeine.maximum-size]`


[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_MAXIMUM_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_MAXIMUM_SIZE+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-cache_quarkus.cache.caffeine.expire-after-write]]`link:#quarkus-cache_quarkus.cache.caffeine.expire-after-write[quarkus.cache.caffeine.expire-after-write]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_WRITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_WRITE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-cache_quarkus.cache.caffeine.expire-after-access]]`link:#quarkus-cache_quarkus.cache.caffeine.expire-after-access[quarkus.cache.caffeine.expire-after-access]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_ACCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_ACCESS+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-cache_quarkus.cache.caffeine.metrics-enabled]]`link:#quarkus-cache_quarkus.cache.caffeine.metrics-enabled[quarkus.cache.caffeine.metrics-enabled]`


[.description]
--
Whether or not metrics are recorded if the application depends on the Micrometer extension. Setting this value to `true` will enable the accumulation of cache stats inside Caffeine.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


h|[[quarkus-cache_quarkus.cache.caffeine.caches-config-additional-configuration-applied-to-a-specific-caffeine-cache-highest-precedence]]link:#quarkus-cache_quarkus.cache.caffeine.caches-config-additional-configuration-applied-to-a-specific-caffeine-cache-highest-precedence[Additional configuration applied to a specific Caffeine cache (highest precedence)]

h|Type
h|Default

a| [[quarkus-cache_quarkus.cache.caffeine.-cache-name-.initial-capacity]]`link:#quarkus-cache_quarkus.cache.caffeine.-cache-name-.initial-capacity[quarkus.cache.caffeine."cache-name".initial-capacity]`


[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__INITIAL_CAPACITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__INITIAL_CAPACITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-cache_quarkus.cache.caffeine.-cache-name-.maximum-size]]`link:#quarkus-cache_quarkus.cache.caffeine.-cache-name-.maximum-size[quarkus.cache.caffeine."cache-name".maximum-size]`


[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__MAXIMUM_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__MAXIMUM_SIZE+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-cache_quarkus.cache.caffeine.-cache-name-.expire-after-write]]`link:#quarkus-cache_quarkus.cache.caffeine.-cache-name-.expire-after-write[quarkus.cache.caffeine."cache-name".expire-after-write]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_WRITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_WRITE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-cache_quarkus.cache.caffeine.-cache-name-.expire-after-access]]`link:#quarkus-cache_quarkus.cache.caffeine.-cache-name-.expire-after-access[quarkus.cache.caffeine."cache-name".expire-after-access]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_ACCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_ACCESS+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-cache_quarkus.cache.caffeine.-cache-name-.metrics-enabled]]`link:#quarkus-cache_quarkus.cache.caffeine.-cache-name-.metrics-enabled[quarkus.cache.caffeine."cache-name".metrics-enabled]`


[.description]
--
Whether or not metrics are recorded if the application depends on the Micrometer extension. Setting this value to `true` will enable the accumulation of cache stats inside Caffeine.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
